Fix main font size on mobile

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -34,6 +34,12 @@ section {
   margin: 0 auto;
 }
 
+@media screen and (max-device-width: 600px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 @media screen and (max-device-width: 767px) {
   section {
     width: 100%;
