--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -138,11 +138,7 @@ main {
       width: 243px;
     }
 
-    h5 {
-      font-size: 19px;
-      font-weight: 400;
-      margin: 0;
-      padding: 20px 20px 0 20px;
+    p {
       text-align: center;
     }
   }
@@ -166,10 +162,7 @@ main {
   }
 
   &#callToAction {
-    h4 {
-      font-weight: 400;
-      margin: 0;
-      padding-top: 20px;
+    p {
       text-align: center;
     }
 
@@ -231,6 +224,12 @@ main {
 }
 
 @media screen and (max-device-width: 767px) {
+  main {
+    h3 {
+      font-size: 4.96vw;
+    }
+  }
+
   main#teams {
     .codefellows {
       width: 290px;
